--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
+    <form id="create-task-form" action="#" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      
+      <label for="task-priority">Priority:</label>
+      <select id="task-priority" name="task-priority">
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+      </select>
+
+      <label for="task-due-date">Due Date:</label>
+      <input type="date" id="task-due-date" name="task-due-date">
+
       <input type="submit" value="Create New Task">
     </form>
+
+    <button id="sort-tasks">Sort Tasks by Priority</button>
 
     <div id="list">
       <h2>My Todos:</h2>
